--- a/.github/workflows/worker.yml
+++ b/.github/workflows/worker.yml
@@ -20,12 +20,16 @@ jobs:
     steps:
       - name: ffmpeg install
         run: sudo apt-get -y install ffmpeg
+      - name: ImageMagick install
+        run: sudo apt-get -y install make imagemagick libmagickwand-dev  # "make" need to create Makefile
       - name: Git clone the repository
         uses: actions/checkout@v3
       - name: Set up Ruby 3.0
         uses: ruby/setup-ruby@359bebbc29cbe6c87da6bc9ea3bc930432750108
         with:
           ruby-version: '3.0'
+      - name: Install dependencies
+        run: bundle install
       - name: get flickr photo
         run: ruby get_photo.rb
       - name: conv jpg to mp4
