--- a/.github/workflows/worker.yml
+++ b/.github/workflows/worker.yml
@@ -1,13 +1,9 @@
 name: daily s3 uploader
 on:
-  push:
-    branches:
-      - main 
-  schedule:
-    - cron: '0 15 * * *' #00:00(JST)に実行
+  workflow_dispatch:
 env:
-  BUCKET_NAME : "my-video-vrc"
-  AWS_REGION : "ap-northeast-1"
+  BUCKET_NAME : ${{ secrets.BUCKET_NAME }}
+  AWS_REGION : ${{ secrets.AWS_REGION }}
   API_KEY : ${{ secrets.API_KEY }}
   USER_ID : ${{ secrets.USER_ID }}
 # permission can be added at job level or workflow level    
